--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
